Implement Sunday Weekly Insights edition
Features:
- Weekly trend aggregation (save daily data)
- LLM-powered synthesis (strategic insights via Claude)
- Dedicated Sunday newsletter template
- GitHub Actions workflow (Sundays at 10 AM UTC)
- Modular, white-label ready architecture

Scripts:
- execution/aggregate_weekly_trends.py
- execution/synthesize_weekly_insights.py
- execution/compose_insights_newsletter.py

Updated:
- send_newsletter.py: --weekly flag support
- daily_newsletter.yml: save trend data
- .github/workflows/weekly_insights.yml: new workflow

--- a/.github/workflows/daily_newsletter.yml
+++ b/.github/workflows/daily_newsletter.yml
@@ -119,6 +119,14 @@ jobs:
           python3 execution/compose_newsletter.py --segment leaders
           python3 execution/compose_newsletter.py --segment innovators
       
+      - name: Step 9.5 - Aggregate weekly trends (for Sunday)
+        if: github.event.inputs.enable_trends != 'false'
+        run: |
+          python3 execution/aggregate_weekly_trends.py builders
+          python3 execution/aggregate_weekly_trends.py leaders
+          python3 execution/aggregate_weekly_trends.py innovators
+        continue-on-error: true
+      
       - name: Step 10 - Send newsletters
         run: |
           if [ "${{ github.event.inputs.test_mode }}" == "true" ]; then
