Fix OpenAI client compatibility (TypeError: proxies)
Changes:
- Updated openai library: 1.12.0 → >=1.52.0
- Added default_headers to all OpenAI clients
- Includes HTTP-Referer and X-Title for OpenRouter

Fixes TypeError about unexpected 'proxies' parameter in:
- select_stories.py
- summarize_articles.py
- synthesize_trends.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ requests==2.31.0
 resend==0.8.0
 
 # LLM Integration via OpenRouter
-openai==1.12.0
+openai>=1.52.0
 
 # Web Scraping
 beautifulsoup4==4.12.3
