--- a/.github/workflows/daily_newsletter.yml
+++ b/.github/workflows/daily_newsletter.yml
@@ -57,6 +57,17 @@ jobs:
         run: python3 execution/enrich_articles.py
         continue-on-error: true  # Don't fail if some scraping fails
       
+      - name: Debug - Check API key
+        run: |
+          if [ -z "$OPENROUTER_API_KEY" ]; then
+            echo "❌ OPENROUTER_API_KEY is NOT set"
+            exit 1
+          else
+            echo "✅ OPENROUTER_API_KEY is set (first 10 chars: ${OPENROUTER_API_KEY:0:10}...)"
+          fi
+        env:
+          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+      
       - name: Step 3 - Select stories (All segments)
         run: |
           python3 execution/select_stories.py --segment builders
