Fix: Run select_stories.py once (doesn't support --segment flag)
Bug: Script was being called 3x with --segment flag it doesn't recognize
Result: Script ran 3x doing same work, but didn't save files
Fix: Run once, processes all segments internally

--- a/.github/workflows/daily_newsletter.yml
+++ b/.github/workflows/daily_newsletter.yml
@@ -69,10 +69,7 @@ jobs:
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
       
       - name: Step 3 - Select stories (All segments)
-        run: |
-          python3 execution/select_stories.py --segment builders
-          python3 execution/select_stories.py --segment leaders
-          python3 execution/select_stories.py --segment innovators
+        run: python3 execution/select_stories.py
         env:
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
       
