--- a/.github/workflows/daily_newsletter.yml
+++ b/.github/workflows/daily_newsletter.yml
@@ -68,84 +68,15 @@ jobs:
         env:
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
       
-      - name: Step 3 - Select stories (All segments)
-        run: python3 execution/select_stories.py
-        env:
-          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-      
-      - name: Step 4 - Detect trends (Optional)
-        if: github.event.inputs.enable_trends != 'false'
+      - name: Run Newsletter Pipeline
         run: |
-          python3 execution/detect_trends.py --segment builders
-          python3 execution/detect_trends.py --segment leaders
-          python3 execution/detect_trends.py --segment innovators
-        continue-on-error: true
-      
-      - name: Step 5 - Synthesize trends (Optional)
-        if: github.event.inputs.enable_trends != 'false'
-        run: |
-          python3 execution/synthesize_trends.py --segment builders
-          python3 execution/synthesize_trends.py --segment leaders
-          python3 execution/synthesize_trends.py --segment innovators
-        env:
-          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-        continue-on-error: true
-      
-      - name: Step 6 - Summarize articles (Builders)
-        run: |
-          if [ "${{ github.event.inputs.enable_trends }}" != "false" ]; then
-            python3 execution/summarize_articles.py --segment builders --enable-trends
+          if [ "${{ github.event.inputs.segment }}" = "all" ]; then
+            python3 execution/run_daily_pipeline.py
           else
-            python3 execution/summarize_articles.py --segment builders
+            python3 execution/run_daily_pipeline.py --segment ${{ github.event.inputs.segment }}
           fi
         env:
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-      
-      - name: Step 7 - Summarize articles (Leaders)
-        run: |
-          if [ "${{ github.event.inputs.enable_trends }}" != "false" ]; then
-            python3 execution/summarize_articles.py --segment leaders --enable-trends
-          else
-            python3 execution/summarize_articles.py --segment leaders
-          fi
-        env:
-          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-      
-      - name: Step 8 - Summarize articles (Innovators)
-        run: |
-          if [ "${{ github.event.inputs.enable_trends }}" != "false" ]; then
-            python3 execution/summarize_articles.py --segment innovators --enable-trends
-          else
-            python3 execution/summarize_articles.py --segment innovators
-          fi
-        env:
-          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-      
-      - name: Step 9 - Compose newsletters
-        run: |
-          python3 execution/compose_newsletter.py --segment builders
-          python3 execution/compose_newsletter.py --segment leaders
-          python3 execution/compose_newsletter.py --segment innovators
-      
-      - name: Step 9.5 - Aggregate weekly trends (for Sunday)
-        if: github.event.inputs.enable_trends != 'false'
-        run: |
-          python3 execution/aggregate_weekly_trends.py builders
-          python3 execution/aggregate_weekly_trends.py leaders
-          python3 execution/aggregate_weekly_trends.py innovators
-        continue-on-error: true
-      
-      - name: Step 10 - Send newsletters
-        run: |
-          if [ "${{ github.event.inputs.test_mode }}" == "true" ]; then
-            echo "Test mode: Would send to test recipients only"
-            # Implement test mode in send_newsletter.py
-          else
-            python3 execution/send_newsletter.py --segment builders
-            python3 execution/send_newsletter.py --segment leaders
-            python3 execution/send_newsletter.py --segment innovators
-          fi
-        env:
           RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
       
       - name: Upload artifacts (logs and newsletters)
