--- a/.github/workflows/daily_newsletter.yml
+++ b/.github/workflows/daily_newsletter.yml
@@ -17,6 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     
+    # Give workflow permission to push commits
+    permissions:
+      contents: write
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
