--- a/.github/workflows/weekly_insights.yml
+++ b/.github/workflows/weekly_insights.yml
@@ -70,6 +70,8 @@ jobs:
           fi
         env:
           RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
       
       - name: Upload artifacts (logs and newsletters)
         if: always()
