--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,6 @@ jinja2==3.1.3
 
 # Environment Variables
 python-dotenv==1.0.1
+
+# Supabase (subscriber queries, sponsor scheduling, click tracking)
+supabase>=2.0.0
